# UVaFTLE

./: .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile.devel  Dockerfile.runtime  README.md
.github/workflows/: build-docker-ftle.yaml  mesh-generation-docker.yaml
CPU/: Makefile
CPU-alone/: Makefile
CPU-alone/include/: arithmetic.h  ftle.h  preprocess.h
CPU-alone/src/: ftle.c  preprocess.c
CPU/include/: arithmetic.h  preprocess.h
CPU/src/: arithmetic.cu  ftle.cu  ftle_dynamic.cu  ftle_guided.cu  ftle_static.cu  preprocess.cu
CUDA/: Makefile  Makefile.backup  Makefile.clang
CUDA/include/: arithmetic.h  ftle.h  preprocess.h
CUDA/src/: arithmetic.cu  eigen.cu  ftle.c  ftle.cu  preprocess.cu
FPGA/: .gitignore
FPGA/OPENCL-NDRANGE/: Makefile
FPGA/OPENCL-NDRANGE/include/: ftle.h
FPGA/OPENCL-NDRANGE/scripts/: compile_devcloud.sh
FPGA/OPENCL-NDRANGE/src/: arithmetic.cl  ftle.c
FPGA/OPENCL-TASK/include/: ftle.h  opencl_helper.h  preprocess.h
FPGA/OPENCL-TASK/scripts/: compile_devcloud.sh  test2D.sh  test3D.sh
FPGA/OPENCL-TASK/src/: arithmetic.cl  ftle.c  opencl_helper.c  preprocess.c
FPGA/SYCL-NDRANGE/include/: ftle.h
FPGA/SYCL-NDRANGE/scripts/: test2D.sh
FPGA/SYCL-NDRANGE/src/: arithmetic.cpp
FPGA/SYCL-TASK/include/: arithmetic.h  preprocess.h
FPGA/SYCL-TASK/scripts/: build.sh  rebuild.sh
FPGA/SYCL-TASK/src/: arithmetic.cpp  ftle.cpp  preprocess.cpp
FPGA/Vitis_HLS_reference/: ftle_2D_HLS_reference.cpp  ftle_3D_HLS_reference.cpp
HIP/: Makefile
HIP/include/: arithmetic.h  preprocess.h
HIP/src/: arithmetic.cpp  ftle.cpp  preprocess.cpp
OPENCL-FPGA/: .gitignore
OPENCL-FPGA/include/: ftle.h  opencl_helper.h  preprocess.h
OPENCL-FPGA/src/: ftle.c  ftle_kernels.cl  opencl_helper.c  preprocess.c
OneAPI/: compile.sh
OneAPI-usm/: compile.sh
OneAPI-usm/include/: arithmetic.h  preprocess.h
OneAPI-usm/src/: arithmetic.cpp  ftle.cpp  preprocess.cpp
OneAPI/include/: ftle.h
OneAPI/src/: arithmetic.cpp  ftle.cpp
SYCL/: compile-oneApi.sh
SYCL-usm/: compile-oneApi.sh
SYCL-usm-device/: compile-oneApi.sh
SYCL-usm-device/include/: arithmetic.h  ftle.h
SYCL-usm-device/src/: arithmetic.cpp  ftle.cpp  preprocess.cpp
SYCL-usm-shared/include/: preprocess.h
SYCL-usm-shared/src/: arithmetic.cpp  ftle.cpp  preprocess.cpp
SYCL-usm/include/: arithmetic.h  ftle.h  preprocess.h
SYCL-usm/src/: arithmetic.cpp  ftle-split.cpp  ftle.cpp  preprocess.cpp
SYCL/include/: arithmetic.h  ftle.h  preprocess.h
SYCL/src/: arithmetic.cpp  ftle.cpp  preprocess.cpp  preprocess.cu
measure-codes/: Makefile  cuda_code.cu  cuda_managed_code.cu  cuda_pinned_code.cu  hip_code.cpp  hip_managed_code.cpp  hip_pinned_code.cpp  sycl_buffers1.cpp  sycl_buffers2.cpp  sycl_buffers4.cpp  sycl_buffers8.cpp  sycl_code1.cpp  sycl_code2.cpp  sycl_code4.cpp  sycl_code8.cpp  sycl_usm.cpp  sycl_usm_device.cpp  sycl_usm_shared.cpp
mesh-generation/: Dockerfile  mesh-generation.py
source/: coords.txt  faces.txt  flowmap.txt
